build-docker.yml: Add default arch
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -11,8 +11,9 @@ on:
         required: true
         type: string
       arch:
-        required: true
+        required: false
         type: string
+        default: 'x86'
   push:
     branches:
       - master
