--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -131,6 +131,8 @@ jobs:
           docker exec nextcloudpi bash -c 'tail -f /var/log/ncp.log' |& awk '{ print "NCP::" $0 }' &
           cmd=(python activation_tests.py --no-gui localhost 8443 4443)
           [[ "${ARCH?}" == "x86" ]] || cmd+=(--timeout 300)
+          
+          sleep 20
                     
           success=false
           for attempt in {1..3}
@@ -138,6 +140,7 @@ jobs:
             echo ":: System Tests (attempt $attempt/3) ::"
             python system_tests.py --no-ping --non-interactive || {
               echo "CI:: System test (attempt $attempt) failed!"
+              sleep 12
               continue
             }
             success=true
@@ -156,6 +159,7 @@ jobs:
             python nextcloud_tests.py --no-gui localhost 8443 4443 || {
               tail -n 20 geckodriver.log >&2 || true
               echo "CI:: Nextcloud test (attempt $attempt/3) failed!"
+              sleep 12
               continue
             }
             success=true
