build-docker.yml: Add status information
Signed-off-by: thecalcaholic <6317548+theCalcaholic@users.noreply.github.com>

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -170,6 +170,8 @@ jobs:
             exit 1
           }
           echo "CI:: Nextcloud test successful"
+          
+          docker exec nextcloudpi bash /usr/local/bin/ncp-diag
 
   test:
     needs:
@@ -265,4 +267,6 @@ jobs:
             exit 1
           }
           echo "CI:: Nextcloud test successful"
+          
+          docker exec nextcloudpi bash /usr/local/bin/ncp-diag
 
