SSH.sh: Reenable pi user if selected in SSH

--- a/etc/ncp-config.d/dnsmasq.cfg
+++ b/etc/ncp-config.d/dnsmasq.cfg
@@ -3,7 +3,7 @@
   "name": "Dnsmasq, to serve names of local machines which are not in the global DNS",
   "title": "dnsmasq",
   "description": "DNS server with cache",
-  "info": "Remember to point your PC and devices DNS or\nyour router DNS to your Raspberry Pi IP",
+  "info": "Remember to point your PC and devices DNS or\nyour router DNS to your NCP IP",
   "infotitle": "",
   "params": [
     {
