--- a/etc/ncp-config.d/nc-datadir.cfg
+++ b/etc/ncp-config.d/nc-datadir.cfg
@@ -9,7 +9,7 @@
     {
       "id": "DATADIR",
       "name": "Data directory",
-      "value": "/media/USBdrive/ncdata",
+      "value": "/opt/ncdata",
       "suggest": "/media/USBdrive/ncdata",
       "default": "/var/www/nextcloud/data",
       "type": "directory"
