SSH: Add option to enable sudo for ssh user.
- Disable root login

Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/SSH.cfg
+++ b/etc/ncp-config.d/SSH.cfg
@@ -29,6 +29,12 @@
       "name": "Confirm",
       "value": "1234",
       "type": "password"
+    },
+    {
+      "id": "SUDO",
+      "name": "Enable sudo",
+      "value": "no",
+      "type": "bool"
     }
   ]
 }
